--- a/PIDev_java/src/UI/UI_User/Login.fxml
+++ b/PIDev_java/src/UI/UI_User/Login.fxml
@@ -2,57 +2,42 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_User.LoginController">
    <children>
       <AnchorPane id="AnchorPane" prefHeight="446.0" prefWidth="710.0" style="-fx-background-color: #0000;">
          <children>
-            <Label fx:id="inscrireUser" alignment="CENTER" layoutX="268.0" layoutY="376.0" onMouseClicked="#Register" prefHeight="26.0" prefWidth="208.0" text="Créer un compte" textFill="#90332b" />
-            <Pane layoutX="191.0" layoutY="115.0" prefHeight="227.0" prefWidth="374.0" style="-fx-background-color: #0000;">
+            <Label fx:id="inscrireUser" alignment="CENTER" layoutX="324.0" layoutY="369.0" onMouseClicked="#Register" prefHeight="26.0" prefWidth="208.0" text="Créer un compte" textFill="#cc0000" />
+            <Pane layoutX="268.0" layoutY="115.0" prefHeight="227.0" prefWidth="374.0" style="-fx-background-color: #0000;">
                <children>
                   <Label fx:id="check" layoutX="123.0" layoutY="198.0" prefHeight="17.0" prefWidth="142.0" />
-                  <Button fx:id="log" layoutX="133.0" layoutY="163.0" mnemonicParsing="false" onMouseClicked="#Login" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #9b2938;" text="Se connecter" textFill="WHITE" />
+                  <Button fx:id="log" layoutX="133.0" layoutY="163.0" mnemonicParsing="false" onMouseClicked="#Login" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #cc0000;" text="Se connecter" textFill="WHITE" />
                   <TextField fx:id="user" layoutX="114.0" layoutY="61.0" />
                   <PasswordField fx:id="pw" layoutX="113.0" layoutY="112.0" />
-                  <Label layoutX="15.0" layoutY="-20.0" prefHeight="74.0" prefWidth="356.0" text="Se Connecter">
+                  <Label layoutX="1.0" layoutY="-58.0" prefHeight="74.0" prefWidth="356.0" text="Se Connecter">
                      <font>
                         <Font name="Franklin Gothic Medium" size="60.0" />
                      </font>
                   </Label>
                   <Label layoutX="29.0" layoutY="65.0" prefHeight="17.0" prefWidth="68.0" text="Email :" />
                   <Label layoutX="19.0" layoutY="116.0" prefHeight="17.0" prefWidth="78.0" text="Mot de passe:" />
-                  <Label fx:id="oublierPwd" alignment="CENTER" layoutX="-11.0" layoutY="137.0" onMouseClicked="#forgetPwd" prefHeight="26.0" prefWidth="149.0" text="Mot de passe oublier" textFill="#90332b">
+                  <Label fx:id="oublierPwd" alignment="CENTER" layoutX="-11.0" layoutY="137.0" onMouseClicked="#forgetPwd" prefHeight="26.0" prefWidth="149.0" text="Mot de passe oublier" textFill="#d02b1f">
                      <font>
                         <Font size="11.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <Label layoutX="313.0" layoutY="359.0" text="pas encore memebre ? " />
-            <Pane prefHeight="452.0" prefWidth="117.0" style="-fx-background-color: #9b2938;">
-               <children>
-                  <Text fill="WHITE" layoutX="14.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recrutini  " textAlignment="RIGHT" wrappingWidth="67.5911425203085" />
-               </children>
-            </Pane>
-            <ImageView fitHeight="52.0" fitWidth="52.0" layoutX="24.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../Pictures/recruitini-logo2.png" />
-               </image>
-            </ImageView>
-            <VBox layoutX="573.0" layoutY="-13.0" prefHeight="456.0" prefWidth="192.0" style="-fx-background-color: #ad0505;">
+            <Label layoutX="365.0" layoutY="354.0" text="Pas encore memebre ? " />
+            <VBox layoutY="-8.0" prefHeight="465.0" prefWidth="192.0" style="-fx-background-color: #ad0505;">
                <children>
                   <Pane prefHeight="94.0" prefWidth="181.0">
                      <children>
@@ -116,7 +101,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="GLOBE" size="14.0" />
                      </graphic>
                   </Button>
-                  <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+                  <Button fx:id="login1" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goToLogin" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                      <font>
                         <Font name="Berlin Sans FB" size="13.0" />
                      </font>
@@ -127,7 +112,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="TASKS" size="14.0" />
                      </graphic>
                   </Button>
-                  <Button fx:id="profil" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="41.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Inscreption" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+                  <Button fx:id="profil" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goToProfil" opacity="0.7" prefHeight="41.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Inscreption" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                      <font>
                         <Font name="Berlin Sans FB" size="13.0" />
                      </font>
@@ -153,16 +138,5 @@
             </VBox>
          </children>
       </AnchorPane>
-      <Group layoutX="7.0" layoutY="145.0">
-         <children>
-            <Hyperlink fx:id="Accueil" onAction="#goToAcceuil" prefHeight="26.0" prefWidth="88.0" text="Accueil" textFill="WHITE" />
-            <Hyperlink fx:id="profil" layoutY="35.0" onAction="#goToProfil" prefHeight="26.0" prefWidth="88.0" text="Compte" textFill="WHITE" />
-            <Hyperlink fx:id="offre" layoutX="1.0" layoutY="66.0" onAction="#goTooffre" prefHeight="26.0" prefWidth="88.0" text="Offre" textFill="WHITE" />
-            <Hyperlink fx:id="demande" layoutX="2.0" layoutY="100.0" onAction="#goTodemande" prefHeight="26.0" prefWidth="88.0" text="Demande" textFill="WHITE" />
-            <Hyperlink fx:id="annonce" layoutX="3.0" layoutY="132.0" onAction="#goToannoce" prefHeight="26.0" prefWidth="88.0" text="Annonce" textFill="WHITE" />
-            <Hyperlink fx:id="login1" layoutX="5.0" layoutY="201.0" onAction="#goToLogin" prefHeight="26.0" prefWidth="88.0" text="Login" textFill="WHITE" />
-            <Hyperlink fx:id="quiz" layoutX="5.0" layoutY="166.0" onAction="#quiz" prefHeight="26.0" prefWidth="88.0" text="Quiz" textFill="WHITE" />
-         </children>
-      </Group>
    </children>
 </AnchorPane>
