--- a/PIDev_java/src/UI/UI_User/UserAfficheBack.fxml
+++ b/PIDev_java/src/UI/UI_User/UserAfficheBack.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -89,6 +90,7 @@
             <Label layoutX="503.0" layoutY="35.0" onDragDetected="#labelcompte" prefHeight="50.0" prefWidth="162.0" />
             <TextField fx:id="rechercher" layoutX="486.0" layoutY="33.0" onKeyPressed="#rechercher" prefHeight="27.0" prefWidth="179.0" promptText="search" style="-fx-border-color: black; -fx-background-color: #FFFFFF;" />
             <ListView fx:id="UserList" layoutX="206.0" layoutY="69.0" prefHeight="303.0" prefWidth="491.0" style="-fx-background-color: #5a727e; -fx-border-color: #5a727e;" />
+            <FontAwesomeIconView fill="#2c2727" glyphName="SEARCH" layoutX="640.0" layoutY="50.0" wrappingWidth="24.6328125" />
          </children>
       </Pane>
       <Label fx:id="compte" alignment="CENTER" layoutX="330.0" layoutY="384.0" onMouseClicked="#compte" prefHeight="26.0" prefWidth="208.0" text="Voir les statistiques " textFill="#141212" />
