--- a/PIDev_java/src/UI/UI_User/UserCandidatAffiche.fxml
+++ b/PIDev_java/src/UI/UI_User/UserCandidatAffiche.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Light.Distant?>
@@ -13,92 +13,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.Rating?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_User.UserCandidatAfficheController">
+<AnchorPane id="AnchorPane" prefHeight="405.0" prefWidth="728.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_User.UserCandidatAfficheController">
    <children>
-      <AnchorPane id="AnchorPane" prefHeight="435.0" prefWidth="628.0">
+      <AnchorPane id="AnchorPane" prefHeight="405.0" prefWidth="728.0">
          <children>
-            <Pane layoutX="29.0" prefHeight="52.0" prefWidth="600.0" style="-fx-background-color: #d7a1a8;">
-               <children>
-                  <Button layoutX="404.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#goTochange" text="Modifier Compte">
-                     <effect>
-                        <Lighting diffuseConstant="1.42" specularConstant="0.0">
-                           <bumpInput>
-                              <Shadow />
-                           </bumpInput>
-                           <light>
-                              <Light.Distant color="#f89a9a" />
-                           </light>
-                        </Lighting>
-                     </effect></Button>
-                  <Button layoutX="514.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#logout" text="Déconnexion">
-                     <effect>
-                        <Lighting diffuseConstant="1.44" specularConstant="0.0">
-                           <bumpInput>
-                              <Shadow />
-                           </bumpInput>
-                           <light>
-                              <Light.Distant color="#f89a9a" />
-                           </light>
-                        </Lighting>
-                     </effect></Button>
-                  <Button layoutX="280.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#goTodesactiv" text="Désactiver Compte">
-                     <effect>
-                        <Lighting diffuseConstant="1.49" specularConstant="0.0" surfaceScale="1.62">
-                           <bumpInput>
-                              <Shadow />
-                           </bumpInput>
-                           <light>
-                              <Light.Distant color="#f89a9a" />
-                           </light>
-                        </Lighting>
-                     </effect></Button>
-                  <Label layoutX="85.0" layoutY="6.0" prefHeight="17.0" prefWidth="142.0" text="Bienvenu dans Recrutini..." />
-               </children>
-            </Pane>
-            <Pane prefHeight="435.0" prefWidth="110.0" style="-fx-background-color: #9b2938;">
-               <children>
-                  <Text fill="#111010" layoutX="14.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recrutini  " textAlignment="RIGHT" wrappingWidth="67.5911425203085" />
-                  <Group layoutX="7.0" layoutY="144.0">
-                     <children>
-                        <Hyperlink fx:id="Accueil" onAction="#goToAcceuil" prefHeight="26.0" prefWidth="88.0" text="Accueil" textFill="WHITE" />
-                        <Hyperlink fx:id="profil" layoutY="35.0" onAction="#goToProfil" prefHeight="26.0" prefWidth="88.0" text="Profil" textFill="WHITE" />
-                        <Hyperlink fx:id="offre" layoutX="1.0" layoutY="66.0" onAction="#goTooffre" prefHeight="26.0" prefWidth="88.0" text="Offre" textFill="WHITE" />
-                        <Hyperlink fx:id="demande" layoutX="2.0" layoutY="100.0" onAction="#goTodemande" prefHeight="26.0" prefWidth="88.0" text="Demande" textFill="WHITE" />
-                        <Hyperlink fx:id="annonce" layoutX="3.0" layoutY="132.0" onAction="#goToannoce" prefHeight="26.0" prefWidth="88.0" text="Annonce" textFill="WHITE" />
-                        <Hyperlink fx:id="quiz" layoutX="5.0" layoutY="166.0" onAction="#quiz" prefHeight="26.0" prefWidth="88.0" text="Quiz" textFill="WHITE" />
-                     </children>
-                  </Group>
-                  <Circle fill="#1b5387a6" layoutX="55.0" layoutY="48.0" radius="26.0" stroke="BLACK" strokeType="INSIDE" />
-               </children>
-            </Pane>
-            <Label fx:id="tfNomPrenom" layoutX="300.0" layoutY="147.0" prefHeight="25.0" prefWidth="325.0" text="Nom et Prénom :">
+            <Label fx:id="tfNomPrenom" layoutX="371.0" layoutY="152.0" prefHeight="25.0" prefWidth="325.0" text="Nom et Prénom :">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
             <BorderPane layoutX="123.0" layoutY="130.0" />
-            <Label fx:id="tfmail" layoutX="300.0" layoutY="189.0" prefHeight="25.0" prefWidth="325.0" text="E-mail :">
+            <Label fx:id="tfmail" layoutX="372.0" layoutY="191.0" prefHeight="25.0" prefWidth="325.0" text="E-mail :">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label fx:id="tfspecialite" layoutX="299.0" layoutY="236.0" prefHeight="25.0" prefWidth="311.0" text="Spécialité :">
+            <Label fx:id="tfspecialite" layoutX="368.0" layoutY="234.0" prefHeight="25.0" prefWidth="311.0" text="Spécialité :">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label fx:id="tfgoverno" layoutX="300.0" layoutY="287.0" prefHeight="25.0" prefWidth="303.0" text="Governorat : ">
+            <Label fx:id="tfgoverno" layoutX="366.0" layoutY="285.0" prefHeight="25.0" prefWidth="303.0" text="Governorat : ">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
             <Label layoutX="441.0" layoutY="278.0" onDragDetected="#setLabelProfileUser" prefHeight="124.0" prefWidth="135.0" />
-            <Label layoutX="123.0" layoutY="77.0" prefHeight="28.0" prefWidth="185.0" text="Profile Candidat" textFill="#830707">
+            <Label layoutX="193.0" layoutY="85.0" prefHeight="28.0" prefWidth="185.0" text="Profile Candidat" textFill="#830707">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
@@ -106,21 +51,154 @@
                   <ColorAdjust />
                </effect>
             </Label>
-            <Rating fx:id="rating" layoutX="330.0" layoutY="89.0" onMouseClicked="#gorating" rating="0.0">
+            <Rating fx:id="rating" layoutX="435.0" layoutY="83.0" onMouseClicked="#gorating" rating="0.0">
                <effect>
                   <Lighting bumpInput="$null" diffuseConstant="2.0" specularConstant="0.81" specularExponent="26.05" surfaceScale="0.57">
                      <light>
-                        <Light.Distant azimuth="360.0" color="#5e1e1ec9" elevation="86.86" />
+                        <Light.Distant azimuth="360.0" color="#9e1f1fc9" elevation="86.86" />
                      </light>
                   </Lighting>
                </effect>
             </Rating>
-            <ImageView fx:id="profilePic" fitHeight="163.0" fitWidth="162.0" layoutX="123.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="profilePic" fitHeight="163.0" fitWidth="162.0" layoutX="193.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../GUI/Icons/icons8_user_50px.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
+      <VBox prefHeight="405.0" prefWidth="179.0" style="-fx-background-color: #ad0505;">
+         <children>
+            <Pane prefHeight="94.0" prefWidth="183.0">
+               <children>
+                  <Label layoutX="75.0" prefHeight="70.0" prefWidth="140.0" text="Recrutini" textFill="WHITE">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="75.0" layoutY="47.0" prefHeight="19.0" prefWidth="89.0" text="Agence D'emploi" textFill="WHITE">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutY="67.0" size="60" text="" wrappingWidth="55.57142639160156" />
+               </children>
+            </Pane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Home" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="14.0" text="" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#offre" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Offre D'emploi" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="BRIEFCASE" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="RendezVous" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="47.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Annonce" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GLOBE" size="14.0" />
+               </graphic>
+            </Button>
+            <Button fx:id="profil" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goToProfil" opacity="0.7" prefHeight="41.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Compte" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="USER" size="14.0" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="A porpos" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+         </children>
+      </VBox>
+      <Pane layoutX="179.0" layoutY="-2.0" prefHeight="61.0" prefWidth="549.0" style="-fx-background-color: #ad0505;">
+         <children>
+            <Label layoutX="47.0" layoutY="10.0" prefHeight="41.0" prefWidth="177.0" text="Compte" textFill="WHITE">
+               <font>
+                  <Font name="Arial Italic" size="24.0" />
+               </font>
+            </Label>
+            <Button layoutX="456.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#logout" text="Déconnexion">
+               <effect>
+                  <Lighting diffuseConstant="1.39" specularConstant="0.0" specularExponent="18.6" surfaceScale="2.31">
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#ee4545" />
+                     </light>
+                  </Lighting>
+               </effect>
+            </Button>
+            <Button layoutX="345.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#goTochange" text="Modifier Compte">
+               <effect>
+                  <Lighting diffuseConstant="1.39" specularConstant="0.0" surfaceScale="2.31">
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#ee4545" />
+                     </light>
+                  </Lighting>
+               </effect>
+            </Button>
+            <Button layoutX="224.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#goTodesactiv" text="Désactiver Compte">
+               <effect>
+                  <Lighting diffuseConstant="1.39" specularConstant="0.0" specularExponent="14.88" surfaceScale="2.31">
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#ee4545" />
+                     </light>
+                  </Lighting>
+               </effect>
+            </Button>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
