--- a/PIDev_java/src/UI/UI_User/UserResetPwd.fxml
+++ b/PIDev_java/src/UI/UI_User/UserResetPwd.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_User.UserResetPwdController">
    <children>
-      <AnchorPane id="AnchorPane" prefHeight="462.0" prefWidth="720.0" style="-fx-background-color: #0000;">
+      <AnchorPane id="AnchorPane" prefHeight="428.0" prefWidth="720.0" style="-fx-background-color: #0000;">
          <children>
-            <Label fx:id="inscrireUser" alignment="CENTER" layoutX="268.0" layoutY="365.0" onMouseClicked="#Register" prefHeight="26.0" prefWidth="208.0" text="Créer un compte" textFill="#90332b" />
-            <Pane layoutX="191.0" layoutY="115.0" prefHeight="206.0" prefWidth="374.0" style="-fx-background-color: #0000;">
+            <Label fx:id="inscrireUser" alignment="CENTER" layoutX="331.0" layoutY="336.0" onMouseClicked="#Register" prefHeight="26.0" prefWidth="208.0" text="Créer un compte" textFill="#f42011" />
+            <Pane layoutX="247.0" layoutY="100.0" prefHeight="206.0" prefWidth="374.0" style="-fx-background-color: #0000;">
                <children>
                   <Label fx:id="check" layoutX="118.0" layoutY="91.0" prefHeight="17.0" prefWidth="142.0" />
-                  <Button fx:id="log" layoutX="282.0" layoutY="86.0" mnemonicParsing="false" onMouseClicked="#actEnvoyer" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="envoyer" textFill="WHITE" />
+                  <Button fx:id="log" layoutX="282.0" layoutY="86.0" mnemonicParsing="false" onMouseClicked="#actEnvoyer" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #cc0000;" text="envoyer" textFill="WHITE" />
                   <TextField fx:id="txtemail" layoutX="114.0" layoutY="61.0" prefHeight="25.0" prefWidth="149.0" />
                   <Label layoutX="-35.0" layoutY="-20.0" prefHeight="74.0" prefWidth="494.0" text="Mot de passe oublier">
                      <font>
@@ -28,30 +27,111 @@
                   </Label>
                   <Label layoutX="29.0" layoutY="65.0" prefHeight="17.0" prefWidth="68.0" text="Email :" />
                   <Label layoutX="19.0" layoutY="136.0" prefHeight="17.0" prefWidth="88.0" text="Saisir le code:" />
-                  <Button fx:id="log1" layoutX="282.0" layoutY="158.0" mnemonicParsing="false" onMouseClicked="#ActVerifier" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #9b2938;" text="verifier code" textFill="WHITE" />
+                  <Button fx:id="log1" layoutX="282.0" layoutY="158.0" mnemonicParsing="false" onMouseClicked="#ActVerifier" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: #cc0000;" text="verifier code" textFill="WHITE" />
                   <TextField fx:id="txtcode" layoutX="113.0" layoutY="132.0" />
                </children>
             </Pane>
-            <Label layoutX="313.0" layoutY="348.0" text="pas encore memebre ? " />
-            <Pane prefHeight="462.0" prefWidth="117.0" style="-fx-background-color: #9b2938;">
-               <children>
-                  <Text fill="WHITE" layoutX="14.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recrutini  " textAlignment="RIGHT" wrappingWidth="67.5911425203085" />
-                  <Circle fill="#284b6b" layoutX="55.0" layoutY="48.0" radius="26.0" stroke="BLACK" strokeType="INSIDE" />
-               </children>
-            </Pane>
-            <Circle fill="#25496b" layoutX="374.0" layoutY="66.0" radius="34.0" stroke="BLACK" strokeType="INSIDE" />
-            <Group layoutX="10.0" layoutY="152.0">
-               <children>
-                  <Hyperlink fx:id="Accueil" onAction="#goToAcceuil" prefHeight="26.0" prefWidth="88.0" text="Accueil" textFill="WHITE" />
-                  <Hyperlink fx:id="profil" layoutY="35.0" onAction="#goToProfil" prefHeight="26.0" prefWidth="88.0" text="Compte" textFill="WHITE" />
-                  <Hyperlink fx:id="offre" layoutX="1.0" layoutY="66.0" onAction="#goTooffre" prefHeight="26.0" prefWidth="88.0" text="Offre" textFill="WHITE" />
-                  <Hyperlink fx:id="demande" layoutX="2.0" layoutY="100.0" onAction="#goTodemande" prefHeight="26.0" prefWidth="88.0" text="Demande" textFill="WHITE" />
-                  <Hyperlink fx:id="annonce" layoutX="3.0" layoutY="132.0" onAction="#goToannoce" prefHeight="26.0" prefWidth="88.0" text="Annonce" textFill="WHITE" />
-                  <Hyperlink fx:id="login1" layoutX="5.0" layoutY="201.0" onAction="#goToLogin" prefHeight="26.0" prefWidth="88.0" text="Login" textFill="WHITE" />
-                  <Hyperlink fx:id="quiz" layoutX="5.0" layoutY="166.0" onAction="#quiz" prefHeight="26.0" prefWidth="88.0" text="Quiz" textFill="WHITE" />
-               </children>
-            </Group>
+            <Label layoutX="376.0" layoutY="319.0" text="pas encore memebre ? " />
          </children>
       </AnchorPane>
+      <VBox layoutX="-1.0" layoutY="-2.0" prefHeight="430.0" prefWidth="192.0" style="-fx-background-color: #ad0505;">
+         <children>
+            <Pane prefHeight="94.0" prefWidth="181.0">
+               <children>
+                  <Label layoutX="75.0" prefHeight="70.0" prefWidth="140.0" text="Recrutini" textFill="WHITE">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="75.0" layoutY="47.0" prefHeight="19.0" prefWidth="89.0" text="Agence D'emploi" textFill="WHITE">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutY="56.0" size="60" text="" wrappingWidth="55.57142639160156" />
+               </children>
+            </Pane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Home" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="14.0" text="" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#offre" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Offre D'emploi" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="BRIEFCASE" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="RendezVous" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="47.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Annonce" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="GLOBE" size="14.0" />
+               </graphic>
+            </Button>
+            <Button fx:id="login1" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goToLogin" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="TASKS" size="14.0" />
+               </graphic>
+            </Button>
+            <Button fx:id="profil" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goToProfil" opacity="0.7" prefHeight="41.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Inscreption" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="USER" size="14.0" />
+               </graphic>
+            </Button>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="A porpos" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
+               </graphic>
+               <font>
+                  <Font name="Berlin Sans FB" size="13.0" />
+               </font>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
